Fix embed width on mobile

--- a/sass/components/_Post.scss
+++ b/sass/components/_Post.scss
@@ -4,6 +4,7 @@
         margin: 32px auto;
         padding: 16px;
         background-color: #EEEEEE;
+        max-width: 100%;
     }
 
     pre {
